src/test/ui/feature-gates/feature-gate-doc_cfg.stderr
error[E0658]: #[doc(cfg(...))] is experimental (see issue #43781)
  --> $DIR/feature-gate-doc_cfg.rs:1:1
   |
LL | #[doc(cfg(unix))] //~ ERROR: #[doc(cfg(...))] is experimental
   | ^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(doc_cfg)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
