src/test/ui/feature-gates/feature-gate-doc_cfg.rs
#[doc(cfg(unix))] //~ ERROR: #[doc(cfg(...))] is experimental
fn main() {}
